--- a/changelog.yaml
+++ b/changelog.yaml
@@ -1,3 +1,5 @@
 06/11/2025:
   - CREATE the file ./code/test/robot_ciclico.py
+  - CREATE the ./docs/setup folder with documentation files
+  - MOVE all the old file in to ./docs/Analysis folder
   - ADD changelog file
