CREATE the file ./docs/Database/Database.md and ./docs/Analysis/Analysis.md

--- a/changelog.yaml
+++ b/changelog.yaml
@@ -1,3 +1,13 @@
+#  ██████╗██╗  ██╗ █████╗ ███╗   ██╗ ██████╗ ███████╗██╗      ██████╗  ██████╗ 
+# ██╔════╝██║  ██║██╔══██╗████╗  ██║██╔════╝ ██╔════╝██║     ██╔═══██╗██╔════╝ 
+# ██║     ███████║███████║██╔██╗ ██║██║  ███╗█████╗  ██║     ██║   ██║██║  ███╗
+# ██║     ██╔══██║██╔══██║██║╚██╗██║██║   ██║██╔══╝  ██║     ██║   ██║██║   ██║
+# ╚██████╗██║  ██║██║  ██║██║ ╚████║╚██████╔╝███████╗███████╗╚██████╔╝╚██████╔╝
+#  ╚═════╝╚═╝  ╚═╝╚═╝  ╚═╝╚═╝  ╚═══╝ ╚═════╝ ╚══════╝╚══════╝ ╚═════╝  ╚═════╝ 
+
+16/11/2025:
+  - CREATE the file ./docs/Database/Database.md and ./docs/Analysis/Analysis.md
+
 07/11/2025:
   - Changed the documentation in the file ./code/test/robot_cycle.py
   - Changed the docs files ./docs/RobotSetup.md, ./docs/Workspace.md
