--- a/changelog.yaml
+++ b/changelog.yaml
@@ -4,6 +4,12 @@
 # ██║     ██╔══██║██╔══██║██║╚██╗██║██║   ██║██╔══╝  ██║     ██║   ██║██║   ██║
 # ╚██████╗██║  ██║██║  ██║██║ ╚████║╚██████╔╝███████╗███████╗╚██████╔╝╚██████╔╝
 #  ╚═════╝╚═╝  ╚═╝╚═╝  ╚═╝╚═╝  ╚═══╝ ╚═════╝ ╚══════╝╚══════╝ ╚═════╝  ╚═════╝ 
+12/01/2026:
+  author_name: Leonardo Guerra
+  author_nick: zena_07
+  changes:
+    - Change the Technicala anlysis withh the advies given by the teacher.
+
 
 11/12/2025:
   author_name: Nicola Tosatti
