Complete the changes in the technical analysis

--- a/changelog.yaml
+++ b/changelog.yaml
@@ -4,11 +4,20 @@
 # ██║     ██╔══██║██╔══██║██║╚██╗██║██║   ██║██╔══╝  ██║     ██║   ██║██║   ██║
 # ╚██████╗██║  ██║██║  ██║██║ ╚████║╚██████╔╝███████╗███████╗╚██████╔╝╚██████╔╝
 #  ╚═════╝╚═╝  ╚═╝╚═╝  ╚═╝╚═╝  ╚═══╝ ╚═════╝ ╚══════╝╚══════╝ ╚═════╝  ╚═════╝ 
+
+12/01/2023:
+  author_name: Leonardo Guerra
+  author_nick: zena_07
+  changes:
+    - Complete the changes in the technical Analysis
+
+
+
 12/01/2026:
   author_name: Leonardo Guerra
   author_nick: zena_07
   changes:
-    - Change the Technicala anlysis withh the advies given by the teacher.
+    - Change the Technical anlysis withh the advies given by the teacher.
 
 
 11/12/2025:
