--- a/changelog.yaml
+++ b/changelog.yaml
@@ -5,19 +5,23 @@
 # ╚██████╗██║  ██║██║  ██║██║ ╚████║╚██████╔╝███████╗███████╗╚██████╔╝╚██████╔╝
 #  ╚═════╝╚═╝  ╚═╝╚═╝  ╚═╝╚═╝  ╚═══╝ ╚═════╝ ╚══════╝╚══════╝ ╚═════╝  ╚═════╝ 
 
-12/01/2023:
-  author_name: Leonardo Guerra
-  author_nick: zena_07
+12/01/2026:
+  author_name: Nicola Tosatti
+  author_nick: ErPollo07
   changes:
-    - Complete the changes in the technical Analysis
-
-
+    - Update docs
 
 12/01/2026:
   author_name: Leonardo Guerra
   author_nick: zena_07
   changes:
-    - Change the Technical anlysis withh the advies given by the teacher.
+    - Complete the changes in the technical Analysis
+
+12/01/2026:
+  author_name: Leonardo Guerra
+  author_nick: zena_07
+  changes:
+    - Change the Technical analysis with the advise given by the teacher.
 
 
 11/12/2025:
