Change and optimized robot 3 code

--- a/changelog.yaml
+++ b/changelog.yaml
@@ -5,6 +5,13 @@
 # ╚██████╗██║  ██║██║  ██║██║ ╚████║╚██████╔╝███████╗███████╗╚██████╔╝╚██████╔╝
 #  ╚═════╝╚═╝  ╚═╝╚═╝  ╚═╝╚═╝  ╚═══╝ ╚═════╝ ╚══════╝╚══════╝ ╚═════╝  ╚═════╝ 
 
+18/01/2026:
+  author_name: Nicola Tosatti
+  author_nick: ErPollo07
+  changes:
+    - Change and optimized robot 3 code
+
+
 15/01/2026:
   author_name: Nicola Tosatti
   author_nick: ErPollo07
