Modify indentation in robot_1.py and robot_cycle.py code

--- a/changelog.yaml
+++ b/changelog.yaml
@@ -10,6 +10,7 @@
   author_nick: ErPollo07
   changes:
     - Change and optimized robot 3 code
+    - Modify indentation in robot_1.py and robot_cycle.py code
 
 
 15/01/2026:
