--- a/changelog.yaml
+++ b/changelog.yaml
@@ -5,6 +5,12 @@
 # ╚██████╗██║  ██║██║  ██║██║ ╚████║╚██████╔╝███████╗███████╗╚██████╔╝╚██████╔╝
 #  ╚═════╝╚═╝  ╚═╝╚═╝  ╚═╝╚═╝  ╚═══╝ ╚═════╝ ╚══════╝╚══════╝ ╚═════╝  ╚═════╝ 
 
+20/01/2026:
+  author_name: Nicola Tosatti
+  author_nick: ErPollo07
+  changes:
+    - Changed the logic in robot_3.py
+
 18/01/2026:
   author_name: Nicola Tosatti
   author_nick: ErPollo07
@@ -12,7 +18,6 @@
     - Change and optimized robot 3 code
     - Modify indentation in robot_1.py and robot_cycle.py code
     - Create functions in robot_cycle.py that sends data to the local server
-
 
 15/01/2026:
   author_name: Nicola Tosatti
